# RealDataAgentBench

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SCORING_SPEC.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  leaderboard.yml
dataagentbench/: __init__.py  cli.py
dataagentbench/core/: __init__.py  registry.py  task.py
dataagentbench/datasets/: __init__.py
dataagentbench/harness/: __init__.py  agent.py  providers.py  runner.py  tools.py  (+1 more)
docs/: index.html  results.json
outputs/: eda_001_20260409T060731.json  eda_001_20260409T094920.json  eda_001_20260409T143622.json  eda_002_20260409T060947.json  eda_002_20260409T094939.json  eda_002_20260409T143918.json  eda_003_20260409T061059.json  eda_003_20260409T095004.json  eda_003_20260409T144047.json  feat_001_20260409T064859.json  feat_001_20260409T095035.json  feat_002_20260409T065209.json  feat_002_20260409T065439.json  feat_002_20260409T095056.json  feat_003_20260409T065700.json  feat_003_20260409T091741.json  feat_003_20260409T095116.json  feat_004_20260409T093649.json  feat_004_20260409T094520.json  feat_004_20260409T113717.json  feat_004_20260409T125417.json  feat_005_20260409T125237.json  feat_005_20260409T125415.json  mod_001_20260409T192702.json
scripts/: build_leaderboard.py  phase1_validate_new_tasks.py  phase2_free_models_multirun.py  phase3_tier1_gpt.py  phase4_tier2_midtier.py  run_missing_and_new.py
tests/: test_feat_generators.py  test_generators.py  test_ml_engineering.py  test_scoring.py  test_task_loader.py  test_tools.py
(+73 files in other folders)
